--- a/css/css.css
+++ b/css/css.css
@@ -9,6 +9,7 @@ body {
     background-image:linear-gradient(#030309, #0b132e) ;
     font-family: 'Microsoft YaHei', '微软雅黑';
     font-size: 32px;
+    height: 100vh;
     color: #E8D5EE;
 }
 .container {
