--- a/css/css.css
+++ b/css/css.css
@@ -104,8 +104,7 @@ body {
     width: 90%; margin-top: 40px;
 }
 .btnCon {
-    height: 140px; display: flex; align-items: end; width: 100%; justify-content: center;
-    padding-bottom: 50px;
+    padding: 50px 0;
 }
 .submitBtn {
     background-image:linear-gradient(#987ACD, #402570);
