--- a/css/css.css
+++ b/css/css.css
@@ -8,7 +8,6 @@ body {
     padding: 0;
     background-image:linear-gradient(#030309, #0b132e) ;
     font-family: 'Microsoft YaHei', '微软雅黑';
-    font-size: 32px;
     color: #E8D5EE;
     min-height: 100vh;
 }
@@ -23,7 +22,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-.topTitleArea {
+.header {
     height: 120px;
     display: flex;
     width: 100%;
@@ -33,8 +32,8 @@ body {
     align-items: center;
     top: 0;
 }
-.topTitleArea h1 {
-    font-size: 48px;
+.header h1 {
+    font-size: 3em;
     font-weight: normal;
     color: #F1DBFF;
 }
@@ -76,7 +75,7 @@ body {
 }
 .tipCon h2 {
     font-weight: normal;
-    font-size: 36px;
+    font-size: 2.5em;
     margin-bottom: 20px;
 }
 .tipCon .tips {
@@ -85,13 +84,13 @@ body {
     flex-direction: row;
     gap: 20px;
     margin-top: 15px;
-    font-size: 36px;
     flex-wrap: wrap;
 }
 .tipCon .tips .tip {
     background: #25165B;
     border: 2px dashed #766B80;
     padding: 10px 20px;
+    font-size: 2.5em;
     border-radius: 15px;
 }
 .tipCon .tips .tip.warning {
@@ -111,7 +110,7 @@ body {
     width: 600px;
     border-radius: 50px;
     border: none;
-    font-size: 36px;
+    font-size: 2.5em;
     color: #DEC0F5;
 }
 .submitBtn:active {
@@ -120,7 +119,7 @@ body {
 .genderCon {
     border-top: 2px dashed #766B80;
     height: 120px;
-    font-size: 36px;
+    font-size: 2.5em;
     width: 100%;
     display: flex;
     align-items: center;
@@ -147,7 +146,7 @@ body {
     border-top: 2px dashed #766B80;
     border-bottom: 2px dashed #766B80;
     height: 120px;
-    font-size: 36px;
+    font-size: 2.5em;
     width: 100%;
     display: flex;
     align-items: center;
@@ -162,7 +161,7 @@ body {
     justify-content: space-around;
     width: auto;
     align-items: center;
-    font-size: 42px;
+    font-size: 2.5em;
 }
 .summaryTitle img {
     width: 48px;
@@ -172,7 +171,7 @@ body {
     width: 90%;
     background-image:linear-gradient(#4B54A5, #1D2038);
     border-radius: 15px;
-    font-size: 32px;
+    font-size: 2em;
     margin-top: 20px;
     position: relative;
 }
