--- a/css/css.css
+++ b/css/css.css
@@ -31,6 +31,10 @@ body {
     position: fixed;
     align-items: center;
     top: 0;
+    background-image: url("../images/header.png");
+    background-size: 100%;
+    background-position: top;
+    background-repeat: no-repeat;
 }
 .header h1 {
     font-size: 3em;
