--- a/css/css.css
+++ b/css/css.css
@@ -42,7 +42,7 @@ body {
     color: #F1DBFF;
 }
 .photoBg {
-    background-image: url(../images/bg4.png);
+    background-image: url(../images/bg.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center center;
